@@ -54,8 +54,7 @@ public class GetResourceTest {
         ToolBox tb = new ToolBox();
         Path file = Paths.get(tb.testSrc).resolve("src").resolve("CLTest.java");
         new JavaTask(tb)
-            .vmOptions("--add-exports", "java.base/jdk.internal.classfile=ALL-UNNAMED",
-                    "--add-exports", "java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED")
+            .vmOptions("--enable-preview", "--source", String.valueOf(Runtime.version().feature()))
             .className(file.toString()) // implies source file mode
             .run(Task.Expect.SUCCESS)
             .writeAll();
